# kurt

./: .bazelrc  .gitignore  .pre-commit-config.yaml  BUILD.bazel  CMakeLists.txt  MODULE.bazel  README.md  WORKSPACE
integration_tests/: CMakeLists.txt
integration_tests/benchmarking/: kurt_benchmark.cpp
integration_tests/macos/: integration_test.cpp
kurt/: BUILD.bazel  CMakeLists.txt
kurt/include/: audio_buffer.hpp  conductor.hpp  grain.hpp  grain_event.hpp  grain_store.hpp  kurt.hpp  module.modulemap  pcm_audio_data.hpp  pcm_parser.hpp  pcm_reader.hpp  sequencer.hpp  thread_safe_audio_buffer.hpp
kurt/src/: conductor.cpp  grain.cpp  grain_store.cpp  kurt.cpp  pcm_parser.cpp  pcm_reader.cpp  thread_safe_audio_buffer.cpp
kurt/test/: conductor_test.cpp  grain_store_test.cpp  grain_test.cpp  kurt_test.cpp  pcm_parser_test.cpp  pcm_reader_test.cpp  sequencer_test.cpp  thread_safe_audio_buffer_test.cpp
kurt/test/utilities/: stub_audio_buffer.hpp
kurt_macos/: BUILD.bazel  CMakeLists.txt
kurt_macos/include/: core_audio_host.hpp  module.modulemap
kurt_macos/src/: core_audio_host.cpp
kurt_macos/test/: core_audio_host_test.cpp
kurt_macos_app/: CMakeLists.txt  ContentView.swift  Info.plist.in  KurtApp.swift  kurtmacosapp-Bridging-Header.h
