###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

bazel_dep(name = "rules_xcodeproj", version = "2.2.0")

bazel_dep(name = "googletest", repo_name = "com_google_googletest", version = "1.14.0")
