cc_library(
    name = "kurt",
    srcs = glob(["src/**/*.h", "src/**/*.cpp"]),
    hdrs = glob(["include/**/*.hpp"]),
    includes = ["include"],
    # copts = ["-std=c++14"],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "kurt_test",
    deps = [
        ":kurt",
        "@com_google_googletest//:gtest_main",
    ],
    srcs = glob(["test/*.cpp"]),
    data = [],
    copts = ["-Ioption=simon"],
    defines = [],
    size = "small",
)
