package(default_visibility = ["//visibility:public"])

cc_library(
    name = "kurt",
    srcs = glob(["src/**/*.h", "src/**/*.cpp"]),
    hdrs = glob(["include/**/*.hpp"]),
    includes = ["include"],
    visibility = ["//visibility:public"],
    copts = ["-std=c++2b"],
)

cc_test(
    name = "kurt_test",
    deps = [
        ":kurt",
        "@com_google_googletest//:gtest_main",
    ],
    srcs = glob(["test/*.cpp"]),
    data = [
        "test/resources/16bit_stereo.wav",
        "test/resources/24bit_stereo.wav"],
    size = "small",
    copts = ["-std=c++2b"],
)
